Fix trends website on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,5 +19,10 @@ pre {
 #__docusaurus {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - var(--ifm-navbar-height));
+}
+
+@media screen and (min-width: 966px) {
+  #__docusaurus {
+    height: calc(100vh - var(--ifm-navbar-height));
+  }
 }
